--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -150,6 +150,8 @@ img{
 			}
 		}
 		.btn{
+			width: 100%;
+			max-width: 100%;
 			padding: 11px 20px;
 			font-size: 12px;
 			line-height: 14px;
