--- a/src/scss/componets/calculator.scss
+++ b/src/scss/componets/calculator.scss
@@ -67,49 +67,6 @@
 				}
 			}
 		}
-		.form-group{
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-		}
-		.form-label{
-			font-weight: bold;
-			font-size: 18px;
-			line-height: 22px;
-			letter-spacing: 0.05em;
-			color: #000000;
-		}
-		.form-control{
-			border: 1px solid #E30613;
-			border-radius: 5px;
-			max-width: 162px;
-			margin-right: 26px;
-			margin-left: auto;
-			padding: 3px .75rem;
-			font-size: 18px;
-			line-height: 21px;
-			text-align: center;
-			color: #8A8383;
-
-			&::-webkit-outer-spin-button,
-			&::-webkit-inner-spin-button {
-				-webkit-appearance: none;
-				margin: 0;
-			}
-			&::placeholder{
-				color: #8A8383;
-			}
-		}
-		.btn{
-			width: 264px;
-			font-weight: bold;
-			font-size: 14px;
-			line-height: 17px;
-			letter-spacing: 0.05em;
-			padding: 6px 25px;
-			margin: 0 auto;
-			display: block;
-		}
 	}
 	&__modal-item{
 		padding: 49px 25px 25px;
@@ -141,6 +98,49 @@
 		text-transform: capitalize;
 		color: #4D4D4D;
 	}
+	&__btn{
+		width: 264px;
+		font-weight: bold;
+		font-size: 14px;
+		line-height: 17px;
+		letter-spacing: 0.05em;
+		padding: 6px 25px;
+		margin: 0 auto;
+		display: block;
+	}
+	.form-group{
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.form-label{
+		font-weight: bold;
+		font-size: 18px;
+		line-height: 22px;
+		letter-spacing: 0.05em;
+		color: #000000;
+	}
+	.form-control{
+		border: 1px solid #E30613;
+		border-radius: 5px;
+		max-width: 162px;
+		margin-right: 26px;
+		margin-left: auto;
+		padding: 3px .75rem;
+		font-size: 18px;
+		line-height: 21px;
+		text-align: center;
+		color: #8A8383;
+
+		&::-webkit-outer-spin-button,
+		&::-webkit-inner-spin-button {
+			-webkit-appearance: none;
+			margin: 0;
+		}
+		&::placeholder{
+			color: #8A8383;
+		}
+	}
 
 	@include r(767){
 		&__header{
@@ -163,7 +163,7 @@
 		}
 		&__modal{
 			display: block;
-
+			margin: 0 0 30px;
 		}
 		&__modal-logo{
 			display: none;
