calc обязательные поля

--- a/src/scss/componets/calculator.scss
+++ b/src/scss/componets/calculator.scss
@@ -141,7 +141,10 @@
 			color: #8A8383;
 		}
 	}
-
+	.alert{
+		text-align: center;
+		display: none;
+	}
 	@include r(767){
 		&__header{
 			margin-bottom: 37px;
