--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -160,6 +160,32 @@ img{
 	}
 }
 
+.form-check-input{
+	margin-top: 6px;
+	margin-left: -24px;
+}
+.form-check{
+	padding-left: 24px;
+}
+.form-check-label{
+	font-weight: normal;
+	font-size: 9px;
+	line-height: 12px;
+	letter-spacing: 0.05em;
+	color: #000000;
+}
+.jq-checkbox{
+	width: 11px;
+	height: 11px;
+	border: 1px solid #E30613!important;
+	border-radius: 2px;
+	background: transparent;
+	outline: none!important;
+}
+.jq-checkbox.checked .jq-checkbox__div{
+	margin: 2px 0 0 1px;
+}
+
 
 
 @import "componets/header";
