--- a/src/scss/remodal.scss
+++ b/src/scss/remodal.scss
@@ -53,7 +53,7 @@
     }
     @include rmin(641){
         max-width: 524px;
-        padding: 32px 54px 10px;
+        padding: 32px 54px;
         .title{
             font-weight: bold;
             font-size: 18px;
