--- a/src/template/_modal.html
+++ b/src/template/_modal.html
@@ -3,7 +3,8 @@
     <button data-remodal-action="close" class="remodal-close"></button>
     <div class="title">Оставьте заявку на консультацию
         по открытию вашего МПР,
-        мы свяжемся с вами в ближайшее время</div>
+        мы свяжемся с вами в ближайшее время
+    </div>
     <form action="">
         <div class="form-group">
             <input type="text" class="form-control" name="NAME" placeholder="Ваше имя">
@@ -72,7 +73,8 @@
             <input type="text" class="form-control" name="EMAIL" placeholder="E-mail">
         </div>
         <div class="form-group">
-            <textarea class="form-control" name="MESSAGE" id="" cols="30" rows="5" placeholder="Задать вопрос"></textarea>
+            <textarea class="form-control" name="MESSAGE" id="" cols="30" rows="5"
+                      placeholder="Задать вопрос"></textarea>
         </div>
         <div class="form-group">
             <button data-remodal-action="confirm" class="btn btn-primary w100">Отправить</button>
@@ -84,7 +86,8 @@
 <div class="remodal" data-remodal-id="trener">
     <button data-remodal-action="close" class="remodal-close"></button>
     <div class="title">Оставьте заявку на связь
-        с региональным тренером</div>
+        с региональным тренером
+    </div>
     <form action="">
         <div class="form-group">
             <input type="text" class="form-control" name="NAME" placeholder="Ваше имя">
@@ -112,129 +115,168 @@
     </form>
 </div>
 
+<!--Калькулятор-->
 <div class="remodal calc" data-remodal-id="calc">
     <button data-remodal-action="close" class="remodal-close"></button>
     <div class="calculator">
         <div class="calculator__modal">
-        <div class="calculator__modal-item">
-            <div class="calculator__modal-logo"><img src="./img/logo.svg" width="441" height="37" alt="">
-            </div>
-            <div class="calculator__modal-title">Инвестиционный бюджет</div>
-            <div id="invest">
-                <table class="table">
-                    <tbody>
-                    <tr>
-                        <td>Услуги Сервисной Компании</td>
-                        <td id="YCK">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Торговое оборудование</td>
-                        <td id="TO">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Техника: компьютеры,
-                            кассы,1С лицензии
-                        </td>
-                        <td id="technique">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Настройка IT</td>
-                        <td id="IT">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Монтаж слаботочных сетей</td>
-                        <td id="MSS">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Безопасность (Ворота защитные+датчики)</td>
-                        <td id="security">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Товарная загрузка</td>
-                        <td id="TZ">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Праздничная листовка открытия</td>
-                        <td id="PLO">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Затраты на Внутренюю и внешнюю рекламу</td>
-                        <td id="ADS">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Ремонт торгового помещения</td>
-                        <td id="RTP">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Заработная плата Персонала</td>
-                        <td id="ZPP">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Праздничное открытие МПР</td>
-                        <td id="POMPR">000 000</td>
-                    </tr>
+            <div class="calculator__modal-item">
+                <div class="calculator__modal-logo"><img src="./img/logo.svg" width="441" height="37" alt="">
+                </div>
+                <div class="calculator__modal-title">Инвестиционный бюджет</div>
+                <div id="invest">
+                    <table class="table">
+                        <tbody>
+                        <tr>
+                            <td>Услуги Сервисной Компании</td>
+                            <td id="YCK">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Торговое оборудование</td>
+                            <td id="TO">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Техника: компьютеры,
+                                кассы,1С лицензии
+                            </td>
+                            <td id="technique">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Настройка IT</td>
+                            <td id="IT">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Монтаж слаботочных сетей</td>
+                            <td id="MSS">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Безопасность (Ворота защитные+датчики)</td>
+                            <td id="security">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Товарная загрузка</td>
+                            <td id="TZ">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Праздничная листовка открытия</td>
+                            <td id="PLO">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Затраты на Внутренюю и внешнюю рекламу</td>
+                            <td id="ADS">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Ремонт торгового помещения</td>
+                            <td id="RTP">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Заработная плата Персонала</td>
+                            <td id="ZPP">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Праздничное открытие МПР</td>
+                            <td id="POMPR">000 000</td>
+                        </tr>
 
-                    </tbody>
-                    <tfoot>
-                    <tr>
-                        <td>Итог:</td>
-                        <td id="investSumma">000 000</td>
-                    </tr>
-                    </tfoot>
-                </table>
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <td>Итог:</td>
+                            <td id="investSumma">000 000</td>
+                        </tr>
+                        </tfoot>
+                    </table>
+                </div>
+            </div>
+            <div class="calculator__modal-item">
+                <div class="calculator__modal-logo"><img src="./img/logo.svg" width="441" height="37" alt="">
+                </div>
+                <div class="calculator__modal-title">Операционный бюджет</div>
+                <div>
+                    <table class="table">
+                        <thead></thead>
+                        <tbody>
+                        <tr>
+                            <td>Выручка в мес, руб</td>
+                            <td id="revenue">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Валовый доход, руб</td>
+                            <td id="INCOME">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Аренда, руб</td>
+                            <td id="rent">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>ФОТ (заработная плата), руб</td>
+                            <td id="FOT">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Прочие расходы (реклама,
+                                хознужды и т.п.
+                            </td>
+                            <td id="OTHER">000 000</td>
+                        </tr>
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <td>Итог:</td>
+                            <td id="operionSumma">000 000</td>
+                        </tr>
+                        <tr>
+                            <td>Окупаемость , мес</td>
+                            <td id="payback">000 000</td>
+                        </tr>
+                        </tfoot>
+                    </table>
+                </div>
+                <div class="calculator__code">
+                    <img class="img-fluid" src="./img/check-code.png" width="208" height="66" alt="">
+                    <div>спасибо!</div>
+                </div>
             </div>
         </div>
-        <div class="calculator__modal-item">
-            <div class="calculator__modal-logo"><img src="./img/logo.svg" width="441" height="37" alt="">
-            </div>
-            <div class="calculator__modal-title">Операционный бюджет</div>
-            <div>
-                <table class="table">
-                    <thead></thead>
-                    <tbody>
-                    <tr>
-                        <td>Выручка в мес, руб</td>
-                        <td id="revenue">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Валовый доход, руб</td>
-                        <td id="INCOME">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Аренда, руб</td>
-                        <td id="rent">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>ФОТ (заработная плата), руб</td>
-                        <td id="FOT">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Прочие расходы (реклама,
-                            хознужды и т.п.
-                        </td>
-                        <td id="OTHER">000 000</td>
-                    </tr>
-                    </tbody>
-                    <tfoot>
-                    <tr>
-                        <td>Итог:</td>
-                        <td id="operionSumma">000 000</td>
-                    </tr>
-                    <tr>
-                        <td>Окупаемость , мес</td>
-                        <td id="payback">000 000</td>
-                    </tr>
-                    </tfoot>
-                </table>
-            </div>
-            <div class="calculator__code">
-                <img class="img-fluid" src="./img/check-code.png" width="208" height="66" alt="">
-                <div>спасибо!</div>
-            </div>
-        </div>
-    </div>
-        <button type="button" class="btn btn-primary">получить полный расчёт на почту</button>
+        <button type="button" class="btn btn-primary" data-remodal-target="payment">получить полный расчёт на почту
+        </button>
         <button data-remodal-action="close" class="remodal-close"><span>закрыть</span></button>
     </div>
 
+</div>
+
+<!--получить полный расчёт на почту-->
+<div class="remodal" data-remodal-id="payment">
+    <button data-remodal-action="close" class="remodal-close"></button>
+    <div class="title">Оставьте заявку на консультацию
+        по открытию вашего МПР,
+        мы свяжемся с вами в ближайшее время
+    </div>
+    <form action="">
+        <div class="form-group">
+            <input type="text" class="form-control" name="NAME" placeholder="Ваше имя">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="PHONE" placeholder="Телефон">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="CITY" placeholder="Ваш Город">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="EMAIL" placeholder="E-mail">
+        </div>
+        <div class="form-group">
+            <button type="button" class="btn btn-primary w100">Свяжитесь со мной</button>
+        </div>
+        <div class="form-check">
+
+            <input class="form-check-input" type="checkbox" name="POLIS" id="POLIS">
+            <label class="form-check-label" for="POLIS">Я&nbsp;принимаю условия &laquo;Политики обработки персональных данных&raquo;
+                и&nbsp;&laquo;Пользовательского соглашения&raquo; и&nbsp;даю своё согласие обработку
+                сведений содержащих мои персональные данные
+                в&nbsp;соответствии с&nbsp;Федеральным законом
+                &laquo;О&nbsp;персональных данных&raquo; от&nbsp;27&nbsp;июля 2006г. &#8470;&nbsp;152-ФЗ и
+                принятых в&nbsp;соответствии с&nbsp;указанным законом нормативных актов
+            </label>
+        </div>
+    </form>
 </div>
