--- a/src/scss/remodal.scss
+++ b/src/scss/remodal.scss
@@ -3,7 +3,7 @@
     background: #EFEDED;
     border-radius: 10px;
     position: relative;
-    padding: 16px 24px 0;
+    padding: 16px 24px;
     .remodal-close {
         right: 10px;
         top: 10px;
