--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -3,6 +3,7 @@
 	src: url('../fonts/AvantGardeCTT/AvantGardeCTT.ttf') format('truetype');
 	font-weight: 400;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -10,12 +11,14 @@
 	src: url('../fonts/AvantGardeCTT/AvantGardeCTT-bold.ttf') format('truetype');
 	font-weight: 700;
 	font-style: normal;
+	font-display: swap;
 }
 @font-face {
 	font-family: 'CenturyGothic';
 	src: url('../fonts/CenturyGothic/CenturyGothic-bold3.ttf') format('truetype');
 	font-weight: 700;
 	font-style: normal;
+	font-display: swap;
 }
 
 
