tabs-format верстка и адаптив

--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -211,6 +211,7 @@ img{
 @import "componets/articles-inner";
 @import "componets/pagination-inner";
 @import "componets/calculator";
+@import "componets/tabs-format";
 
 
 
