--- a/src/scss/componets/reviews.scss
+++ b/src/scss/componets/reviews.scss
@@ -1,47 +1,44 @@
 .reviews{
-	padding: 80px 0;
+	margin-bottom: 118px;
 	&__header {
-		margin-bottom: 100px;
+		margin-bottom: 72px;
 	}
 	&__title{
 		display: inline-block;
-		font-weight: bold;
-		font-size: 24px;
-		line-height: 25px;
+		font-weight: 700;
+		font-size: 32px;
+		line-height: 50px;
 		letter-spacing: 0.05em;
-		position: relative;
-		width: fit-content;
-		&:after{
-			content: '';
-			position: absolute;
-			bottom: -15px;
-			left: 0;
-			width: 100%;
-			height: 3px;
-			background-color: #E30613;
-		}
+		color: #E30613;
+		margin-left: 118px;
 	}
 	&__body{
 		position: relative;
 	}
 	&__name{
-		background-color: #EFEDED;
-		padding: 29px 60px;
-		font-weight: bold;
-		font-size: 24px;
+		background: linear-gradient(83.38deg, #E30613 4.96%, #FF646E 84.78%);
+		border-radius: 20px;
+		font-family: 'AvantGardeCTT';
+		font-style: normal;
+		font-weight: 700;
+		font-size: 22px;
 		line-height: 25px;
+		text-align: center;
 		letter-spacing: 0.05em;
-		color: #000000;
-		margin-bottom: 23px;
+		color: #FFFFFF;
+		padding: 29px 39px;
+		margin: 0 0 28px;
 	}
 	&__anons{
-		margin: 0;
-		font-weight: normal;
+		margin: 0 0 27px;
 		font-size: 18px;
-		line-height: 25px;
+		line-height: 24px;
 		letter-spacing: 0.05em;
+		text-align: justify;
 		color: #000000;
 		padding: 0 4px;
+		height: 197px;
+		overflow: hidden;
 		ul{
 			margin: 15px 0;
 			padding: 0;
@@ -77,14 +74,46 @@
 			color: #000000;
 		}
 	}
-	.btn{
+	&__link{
+		font-family: 'AvantGardeCTT';
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		text-decoration-line: underline;
+		color: #000000;
+	}
+	&__footer{
+		margin-top: 25px;
+		max-width: 1246px;
+	}
+	&__btn{
 		width: fit-content;
-		margin: 40px auto 0;
 		display: block;
+		margin: 0 0 0 auto;
+		font-family: 'AvantGardeCTT';
+		font-weight: 700;
+		font-size: 22px;
+		line-height: 26px;
+		letter-spacing: 0.05em;
+		color: #D43749;
+		text-decoration: none;
+		position: relative;
+		&:after{
+			content: '';
+			position: absolute;
+			top: 3px;
+			right: -100px;
+			background-image: url("../img/icons-sprite.svg#icon-arrow-next");
+			background-repeat: no-repeat;
+			width: 54px;
+			height: 22px;
+		}
 	}
 	.swiper-container-reviews{
 		overflow: hidden;
 		position: relative;
+		max-width: 1246px;
 	}
 	.swiper-reviews-next{
 		cursor: pointer;
