--- a/src/template/_footer.html
+++ b/src/template/_footer.html
@@ -2,22 +2,22 @@
     <div class="container">
         <div class="footer__body">
             <div class="footer__item">
-                <a href="#"><img src="./img/icons-sprite.svg#icon-vk" width="117" height="39" alt=""></a>
+                <a href="#"><img src="./img/icons-sprite.svg#icon-vk" width="118" height="39" alt=""></a>
             </div>
             <div class="footer__item">
-                <a href="#"><img src="./img/icons-sprite.svg#icon-ok" width="119" height="39" alt=""></a>
+                <a href="#"><img src="./img/icons-sprite.svg#icon-ok" width="120" height="39" alt=""></a>
             </div>
             <div class="footer__item">
-                <a href="#"><img src="./img/icons-sprite.svg#icon-fb" width="132" height="39" alt=""></a>
+                <a href="#"><img src="./img/icons-sprite.svg#icon-tg" width="120" height="39" alt=""></a>
             </div>
             <div class="footer__item">
-                <a href="#"><img src="./img/icons-sprite.svg#icon-inst" width="132" height="39" alt=""></a>
+                <a href="#"><img src="./img/icons-sprite.svg#icon-tiktok" width="185" height="40" alt=""></a>
             </div>
         </div>
+        <div class="footer__policy">политика конфиденциальностии обработки персональных данных</div>
     </div>
 </footer>
 
 <div id="button-up" class="button-up">
     <div class="button-up__arrow"></div>
-    наверх
 </div>
