--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -9,7 +9,7 @@
 	padding: 20px 35px;
 	font-size: 18px;
 	line-height: 21px;
-	border-radius: 4px;
+	border-radius: 50px;
 	cursor: pointer;
 	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 	text-decoration: none;
@@ -24,11 +24,11 @@
 	}
 	&.btn-primary{
 		color: #fff;
-		background: #E30613;
-		border-color: #E30613;
+		background: linear-gradient(180deg, #FF646E -37.51%, #E20E1B 85.71%);
+		border-color: transparent;
 		&:hover {
 			color: #E30613;
-			background-color: #fff;
+			background: #fff;
 			border-color: #E30613;
 		}
 	}
@@ -119,7 +119,7 @@
         
 		&:hover {
 			color: #fff;
-			background-color: #E30613;
+			background: linear-gradient(180deg, #FF646E -37.51%, #E20E1B 85.71%);
 			border-color: #E30613;
 		}
 		&:focus {
@@ -138,7 +138,7 @@
 			border-color: #324C9A;
 		}
 		&:focus {
-			box-shadow: 0 0 0 0.2rem rgb(108,117,125 / 50%);
+			box-shadow: 0 0 0 0.2rem rgba(108,117,125 , 0.5);
 		}
 	}
 	&.btn-outline-success{
@@ -152,7 +152,7 @@
 			border-color: #6FCF97;
 		}
 		&:focus {
-			box-shadow: 0 0 0 0.2rem rgb(40 ,167,69 / 50%);
+			box-shadow: 0 0 0 0.2rem rgba(40 ,167,69 , .5);
 		}
 	}
 	&.btn-outline-danger{
@@ -166,7 +166,7 @@
 			border-color: #dc3545;
 		}
 		&:focus {
-			box-shadow: 0 0 0 0.2rem rgb(220, 53,69 / 50%);
+			box-shadow: 0 0 0 0.2rem rgba(220, 53,69 , .5);
 		}
 	}
 	&.btn-outline-warning{
@@ -180,7 +180,7 @@
 			border-color: #ffc107;
 		}
 		&:focus {
-			box-shadow: 0 0 0 0.2rem rgb(255 ,193,7 / 50%);
+			box-shadow: 0 0 0 0.2rem rgba(255 ,193,7 , .5);
 		}
 	}
 	&.btn-outline-info{
@@ -194,7 +194,7 @@
 			border-color: #17a2b8;
 		}
 		&:focus {
-			box-shadow: 0 0 0 0.2rem rgb(23 ,162 ,184 / 50%);
+			box-shadow: 0 0 0 0.2rem rgba(23 ,162 ,184 , .5);
 		}
 	}
 
@@ -209,7 +209,7 @@
 			border-color: #f8f9fa;
 		}
 		&:focus {
-			box-shadow: 0 0 0 0.2rem rgb(248 ,249 ,250 / 50%);
+			box-shadow: 0 0 0 0.2rem rgba(248 ,249 ,250 , .5);
 		}
 	}
 	&.btn-outline-dark{
@@ -223,7 +223,7 @@
 			border-color: #343a40;
 		}
 		&:focus {
-			box-shadow: 0 0 0 0.2rem rgb(52, 58 ,64 / 50%);
+			box-shadow: 0 0 0 0.2rem rgba(52, 58 ,64 , .5);
 		}
 	}
 }
