--- a/src/scss/componets/footer.scss
+++ b/src/scss/componets/footer.scss
@@ -1,17 +1,28 @@
 .footer{
-	background-color: #E30613;
-	padding: 88px 0;
+	background-color: #4E5A65;
+	padding: 88px 0 36px;
 	margin-top: 45px;
 	&__body{
 		display: flex;
 		flex-wrap: wrap;
+		gap: 20px 112px;
 		align-items: center;
-		justify-content: space-between;
 		img{
 			max-width: 100%;
 			height: auto;
 			display: block;
 		}
+	}
+	&__policy{
+		margin-top: 24px;
+		font-family: 'AvantGardeCTT';
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 25px;
+		letter-spacing: 0.05em;
+		color: #FFFFFF;
+		text-decoration: none;
+		display: block;
 	}
 
 	@include r(767){
