--- a/src/scss/componets/store-decoration.scss
+++ b/src/scss/componets/store-decoration.scss
@@ -18,6 +18,29 @@
 
 	.one .swiper-slide {
 		width: 548px;
+		&.swiper-slide-visible{
+			&:before{
+				content: '';
+				position: absolute;
+				top: 0;
+				left: -50px;
+				width: 50px;
+				height: 100%;
+				background: linear-gradient(-90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+
+				z-index: 10;
+			}
+			&:after{
+				content: '';
+				position: absolute;
+				top: 0;
+				right: -50px;
+				width: 50px;
+				height: 100%;
+				background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+				z-index: 10;
+			}
+		}
 	}
 
 	.two{
