--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -28,7 +28,7 @@ body {
 }
 
 .container {
-	max-width: 1156px;
+	max-width: 1388px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-right: 15px;
@@ -87,36 +87,25 @@ img{
 	right: 20px;
 	bottom: 100px;
 	transition: .3s;
-	width: 62px;
-	height: 59px;
+	width: 57px;
+	height: 57px;
+	border-radius: 50%;
 	overflow: hidden;
-	background-color: #fff;
-	color: #E30613;
-	font-weight: normal;
-	font-size: 12px;
-	line-height: 14px;
-	z-index: 100;
-	text-align: center;
-	padding: 8px 0;
-	letter-spacing: 0.05em;
-	&:hover{
-		background-color: #E30613;
-		cursor: pointer;
-		transition: .3s;
-		color: #fff;
-		.button-up__arrow{
-			background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown-white");
-		}
-	}
-	&__arrow{
-		background-image: url("../img/icons-sprite.svg#icon-arrow-dropdown");
+	background-color: #D9D9D9;
+	align-items: center;
+	justify-content: center;
+	z-index: 15;
+	&:before{
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		background-image: url("../img/icons-sprite.svg#button-up");
 		background-repeat: no-repeat;
 		background-position: center;
-		background-size: 100%;
-		width: 36px;
-		height: 21px;
-		margin: 0 auto 4px;
-		transform: rotate(180deg);
+		background-size: 160%;
+		width: 100%;
+		height: 100%;
 	}
 }
 
@@ -212,6 +201,7 @@ img{
 @import "componets/pagination-inner";
 @import "componets/calculator";
 @import "componets/tabs-format";
+@import "componets/tur";
 
 
 
