--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,43 +1,19 @@
 <header class="header">
     <div class="container">
         <div class="header__body">
-            <a href="#" class="header__logo">
-                <img src="./img/logo.svg" width="441" height="37" alt="Магазин постоянных распродаж">
-            </a>
             <button id="menu" type="button" class="header__button"><span></span></button>
             <a class="header__phone" href="tel:88002500600" title="Телефон">8 800 2500 600</a>
-            <button type="button" class="header__btn btn btn-outline-primary" data-remodal-target="consultation">
-                Заказать звонок
-            </button>
+            <nav class="nav">
+                    <ul class="nav__menu">
+                        <li class="nav__item"><a class="nav__link" href="#">Главная</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">учебный центр</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">о магазинах</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">калькулятор/инвестиции</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">новости</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">Статьи</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">Арендодателям</a></li>
+                    </ul>
+            </nav>
         </div>
     </div>
 </header>
-<nav class="nav">
-    <div class="container">
-        <ul class="nav__menu">
-            <li class="nav__item">
-                <a class="nav__link nav__link--arrow" href="#about">О нас</a>
-                <ul class="nav__dropdown dropdown">
-                    <li class="dropdown__item"><a class="dropdown__link" href="#information">общая информация</a>
-                    </li>
-                    <li class="dropdown__item"><a class="dropdown__link" href="#geografia">георграфия</a></li>
-                    <li class="dropdown__item"><a class="dropdown__link" href="#statistic">статистика</a></li>
-                </ul>
-            </li>
-            <li class="nav__item">
-                <a class="nav__link nav__link--arrow" href="#advantage">Готовое решение</a>
-                <ul class="nav__dropdown dropdown">
-                    <li class="dropdown__item"><a class="dropdown__link" href="#advantage">преимущества МПР</a></li>
-                    <li class="dropdown__item"><a class="dropdown__link" href="#opening">этапы открытия</a></li>
-                    <li class="dropdown__item"><a class="dropdown__link" href="#store-decoration">оформление
-                        магазина</a></li>
-                    <li class="dropdown__item"><a class="dropdown__link" href="#uniform">униформа</a></li>
-                </ul>
-            </li>
-            <li class="nav__item"><a class="nav__link" href="#learning-main">Учебный центр</a></li>
-            <li class="nav__item"><a class="nav__link" href="#reviews">Отзывы</a></li>
-            <li class="nav__item"><a class="nav__link" href="#">Статьи</a></li>
-            <li class="nav__item"><a class="nav__link" href="#calculator">Калькулятор</a></li>
-        </ul>
-    </div>
-</nav>
