--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -180,14 +180,11 @@ img{
 @import "componets/header";
 @import "componets/nav";
 @import "componets/hero";
-@import "componets/number";
 @import "componets/footer";
 @import "componets/percent";
-@import "componets/general-information";
 @import "componets/geografia";
-@import "componets/statistic";
 @import "componets/advantage";
-@import "componets/open-data";
+@import "componets/opening";
 @import "componets/store-decoration";
 @import "componets/uniform";
 @import "componets/parametrs";
@@ -202,6 +199,9 @@ img{
 @import "componets/calculator";
 @import "componets/tabs-format";
 @import "componets/tur";
+@import "componets/video-shops";
+@import "componets/concerns";
+@import "componets/footer-form";
 
 
 
