--- a/src/scss/componets/footer.scss
+++ b/src/scss/componets/footer.scss
@@ -15,7 +15,7 @@
 	}
 	&__policy{
 		margin-top: 24px;
-		font-family: 'AvantGardeCTT';
+		font-family: $font1;
 		font-weight: 400;
 		font-size: 12px;
 		line-height: 25px;
