--- a/src/scss/componets/tabs-format.scss
+++ b/src/scss/componets/tabs-format.scss
@@ -23,7 +23,7 @@
 		letter-spacing: 0.05em;
 		color: #FFFFFF;
 		flex-shrink: 1;
-		font-family: 'AvantGardeCTT';
+		font-family: $font1;
 		p{
 			font-size: 18px;
 			line-height: 25px;
