--- a/src/scss/componets/opening.scss
+++ b/src/scss/componets/opening.scss
@@ -1,10 +1,11 @@
 .opening{
-  margin-bottom: 81px;
+  margin-bottom: 72px;
   &__header {
-    margin-bottom: 72px;
+    margin-bottom: 77px;
     padding-left: 118px;
   }
   &__title{
+    font-family: $font1;
     font-weight: 700;
     font-size: 32px;
     line-height: 50px;
@@ -17,6 +18,7 @@
     line-height: 26px;
     letter-spacing: 0.05em;
     color: #000000;
+    margin-top: 10px;
   }
   &__body{
     position: relative;
@@ -43,6 +45,7 @@
   }
   &__figure-big{
     flex: 1 0 100%;
+    margin: 30px 0;
   }
   @include r(767){
     &__figure-big{
