--- a/src/scss/componets/tur.scss
+++ b/src/scss/componets/tur.scss
@@ -1,8 +1,8 @@
 .tur{
-  margin-bottom: 85px;
+  margin-bottom: 86px;
   &__body{
     position: relative;
-    margin-bottom: 85px;
+    margin-bottom: 81px;
     &:before{
       content: '';
       position: absolute;
@@ -19,6 +19,8 @@
     top: 50%;
     transform: translate(-50%,-50%);
     z-index: 10;
+    max-width: 442px;
+    width: 100%;
   }
   &__footer{
     text-align: center;
