--- a/src/scss/componets/video-shops.scss
+++ b/src/scss/componets/video-shops.scss
@@ -1,8 +1,8 @@
 .video-shops{
   background-color: #EFEFEF;
-  padding: 85px 0 50px;
+  padding: 85px 0 38px;
   &__header {
-    margin-bottom: 85px;
+    margin-bottom: 71px;
     padding-left: 118px;
   }
   &__title{
@@ -14,7 +14,7 @@
     color: #E30613;
   }
   &__figure{
-    margin: 0 0 13px;
+    margin: 0 0 30px;
     background: #D9D9D9;
     border-radius: 10px;
     overflow: hidden;
@@ -27,7 +27,7 @@
     font-size: 18px;
     letter-spacing: 0.05em;
     color: #000000;
-    margin-bottom: 10px;
+    margin-bottom: 19px;
   }
   &__anons{
     font-weight: 400;
@@ -36,14 +36,14 @@
     color: #000000;
   }
   &__footer{
-    margin-top: 25px;
+    margin-top: 76px;
     max-width: 1246px;
   }
   &__btn{
     width: fit-content;
     display: block;
     margin: 0 0 0 auto;
-    font-family: 'AvantGardeCTT';
+    font-family: $font1;
     font-weight: 700;
     font-size: 22px;
     line-height: 26px;
@@ -58,7 +58,7 @@
       right: -100px;
       background-image: url("../img/icons-sprite.svg#icon-arrow-next");
       background-repeat: no-repeat;
-      width: 54px;
+      width: 72px;
       height: 22px;
     }
   }
