--- a/src/scss/mpr-franchise.scss
+++ b/src/scss/mpr-franchise.scss
@@ -202,6 +202,7 @@ img{
 @import "componets/video-shops";
 @import "componets/concerns";
 @import "componets/footer-form";
+@import "componets/send-plan";
 
 
 
