--- a/src/scss/componets/tur.scss
+++ b/src/scss/componets/tur.scss
@@ -12,6 +12,10 @@
       width: 100%;
       height: 100%;
     }
+    img{
+      width: 100%;
+      display: block;
+    }
   }
   &__btn{
     position: absolute;
