--- a/src/scss/componets/footer-form.scss
+++ b/src/scss/componets/footer-form.scss
@@ -19,7 +19,21 @@
     margin: 0 auto;
   }
   &__form{
-
+    position: relative;
+    max-width: 440px;
+    margin: 0 auto;
+    &:after{
+      content: '';
+      position: absolute;
+      bottom: -129px;
+      right: -414px;
+      background-image: url("../img/form-bg.png");
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 307px;
+      height: 310px;
+    }
   }
   &__check{
     display: flex;
